--- a/index.html
+++ b/index.html
@@ -246,10 +246,10 @@
         <div class="w3-row-padding">
             <div class="w3-col m6">
                 <h3>Our Skills.</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>
-                    tempor incididunt ut labore et dolore.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>
-                    tempor incididunt ut labore et dolore.</p>
+                <p>Excellent Communication, Budget Friendly, Product knowledge, Test Equipment, Software knowledge and
+                    overall Maintenance</p>
+                <p>No fix no Fee.</p>
+                <p>Support 24/7 </p>
             </div>
             <div class="w3-col m6">
                 <p class="w3-wide"><i class="fa fa-camera w3-margin-right"></i>Repairs</p>
@@ -277,7 +277,7 @@
                 <ul class="w3-ul w3-white w3-hover-shadow">
                     <li class="w3-black w3-xlarge w3-padding-32">Basic</li>
                     <li class="w3-padding-16"><b>10</b> Repairs</li>
-                    <li class="w3-padding-16"><b>10</b> Software</li>
+                    <li class="w3-padding-16"><b>10</b> Software Installs</li>
                     <li class="w3-padding-16"><b>10</b> Domains</li>
                     <li class="w3-padding-16"><b>Endless</b> Support</li>
                     <li class="w3-padding-16">
@@ -293,7 +293,7 @@
                 <ul class="w3-ul w3-white w3-hover-shadow">
                     <li class="w3-red w3-xlarge w3-padding-48">Pro</li>
                     <li class="w3-padding-16"><b>25</b> Repairs</li>
-                    <li class="w3-padding-16"><b>25</b> Software</li>
+                    <li class="w3-padding-16"><b>25</b> Software Installs</li>
                     <li class="w3-padding-16"><b>25</b> Domains</li>
                     <li class="w3-padding-16"><b>Endless</b> Support</li>
                     <li class="w3-padding-16">
@@ -309,7 +309,7 @@
                 <ul class="w3-ul w3-white w3-hover-shadow">
                     <li class="w3-black w3-xlarge w3-padding-32">Premium</li>
                     <li class="w3-padding-16"><b>50+</b> Repairs</li>
-                    <li class="w3-padding-16"><b>50</b> Software</li>
+                    <li class="w3-padding-16"><b>50</b> Software Installs</li>
                     <li class="w3-padding-16"><b>50</b> Domains</li>
                     <li class="w3-padding-16"><b>Endless</b> Support</li>
                     <li class="w3-padding-16">
@@ -360,36 +360,11 @@
             <i class="fa fa-twitter w3-hover-opacity"></i>
             <i class="fa fa-linkedin w3-hover-opacity"></i>
         </div>
-        <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank"
-                class="w3-hover-text-green">w3.css</a></p>
+        <p>Created by Jay O'Sullivan</p>
+        <i class="fa fa-copyright" style="font-size:24px">SRS 2023</i>
     </footer>
 
-    <script>
-        // Modal Image Gallery
-        function onClick(element) {
-            document.getElementById("img01").src = element.src;
-            document.getElementById("modal01").style.display = "block";
-            var captionText = document.getElementById("caption");
-            captionText.innerHTML = element.alt;
-        }
-
-
-        // Toggle between showing and hiding the sidebar when clicking the menu icon
-        var mySidebar = document.getElementById("mySidebar");
-
-        function w3_open() {
-            if (mySidebar.style.display === 'block') {
-                mySidebar.style.display = 'none';
-            } else {
-                mySidebar.style.display = 'block';
-            }
-        }
-
-        // Close the sidebar with the close button
-        function w3_close() {
-            mySidebar.style.display = "none";
-        }
-    </script>
+    <script src="/assets/js/script.js"></script>
 
 </body>
 
