fixed issue with images not loading gh pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>O'Sullivan's Repair Shop</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="/assets/css/style.css">
+<link rel="stylesheet" href="assets/css/style.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -102,7 +102,7 @@
                 <p><a href="#work" class="w3-button w3-black"><i class="fa fa-th"> </i> View Our Works</a></p>
             </div>
             <div class="w3-col m6">
-                <img class="w3-image w3-round-large" src="/assets/images/hardware.jpg" alt="Hardware" width="500"
+                <img class="w3-image w3-round-large" src="assets/images/hardware.jpg" alt="Hardware" width="500"
                     height="400">
             </div>
         </div>
@@ -115,7 +115,7 @@
         <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-card">
-                    <img src="/assets/images/ceo.jpg" alt="John" style="width:100%">
+                    <img src="assets/images/ceo.jpg" alt="John" style="width:100%">
                     <div class="w3-container">
                         <h3>Jay Hunt</h3>
                         <p class="w3-opacity">CEO & Founder</p>
@@ -128,7 +128,7 @@
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-card">
-                    <img src="/assets/images/manager.jpg" alt="Jane" style="width:100%">
+                    <img src="assets/images/manager.jpg" alt="Jane" style="width:100%">
                     <div class="w3-container">
                         <h3>Anja Doe</h3>
                         <p class="w3-opacity">Manager</p>
@@ -141,7 +141,7 @@
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-card">
-                    <img src="/assets/images/design-team.jpg" alt="design-team" style="width:100%">
+                    <img src="assets/images/design-team.jpg" alt="design-team" style="width:100%">
                     <div class="w3-container">
                         <h3>Design Team</h3>
                         <p class="w3-opacity">Web Designers</p>
@@ -154,7 +154,7 @@
             </div>
             <div class="w3-col l3 m6 w3-margin-bottom">
                 <div class="w3-card">
-                    <img src="/assets/images/hardware-repair.jpg" alt="Repair" style="width:100%">
+                    <img src="assets/images/hardware-repair.jpg" alt="Repair" style="width:100%">
                     <div class="w3-container">
                         <h3>Repair Team</h3>
                         <p class="w3-opacity">Repair Team</p>
@@ -195,38 +195,38 @@
 
         <div class="w3-row-padding" style="margin-top:64px">
             <div class="w3-col l3 m6">
-                <img src="/assets/images/web-design.jpg" style="width:100%" onclick="onClick(this)"
+                <img src="assets/images/web-design.jpg" style="width:100%" onclick="onClick(this)"
                     class="w3-hover-opacity" alt="Website Design">
             </div>
             <div class="w3-col l3 m6">
-                <img src="/assets/images/laptop-repair.jpg" style="width:100%" onclick="onClick(this)"
+                <img src="assets/images/laptop-repair.jpg" style="width:100%" onclick="onClick(this)"
                     class="w3-hover-opacity" alt="Laptop Repair">
             </div>
             <div class="w3-col l3 m6">
-                <img src="/assets/images/ps4-controller.jpg" style="width:100%" onclick="onClick(this)"
+                <img src="assets/images/ps4-controller.jpg" style="width:100%" onclick="onClick(this)"
                     class="w3-hover-opacity" alt="PS4 Controller">
             </div>
             <div class="w3-col l3 m6">
-                <img src="/assets/images/phone.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
+                <img src="assets/images/phone.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
                     alt="Phone Repair">
             </div>
         </div>
 
         <div class="w3-row-padding w3-section">
             <div class="w3-col l3 m6">
-                <img src="/assets/images/graphics-card.jpg" style="width:100%" onclick="onClick(this)"
+                <img src="assets/images/graphics-card.jpg" style="width:100%" onclick="onClick(this)"
                     class="w3-hover-opacity" alt="PC Build">
             </div>
             <div class="w3-col l3 m6">
-                <img src="/assets/images/gameboy.jpg" style="width:100%" onclick="onClick(this)"
-                    class="w3-hover-opacity" alt="A camera">
+                <img src="assets/images/gameboy.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity"
+                    alt="A camera">
             </div>
             <div class="w3-col l3 m6">
-                <img src="/assets/images/antivirus.jpg" style="width:100%" onclick="onClick(this)"
+                <img src="assets/images/antivirus.jpg" style="width:100%" onclick="onClick(this)"
                     class="w3-hover-opacity" alt="Antivirus">
             </div>
             <div class="w3-col l3 m6">
-                <img src="/assets/images/gaming-setup.jpg" style="width:100%" onclick="onClick(this)"
+                <img src="assets/images/gaming-setup.jpg" style="width:100%" onclick="onClick(this)"
                     class="w3-hover-opacity" alt="Gaming setup">
             </div>
         </div>
@@ -345,7 +345,7 @@
                 </p>
             </form>
             <!-- Image of location/map -->
-            <img src="/assets/images/dublin.jpg" class="w3-image w3-greyscale" style="width:100%;margin-top:48px"
+            <img src="assets/images/dublin.jpg" class="w3-image w3-greyscale" style="width:100%;margin-top:48px"
                 alt="Dublin">
         </div>
     </div>
