removed / from script path

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
         <i class="fa fa-copyright" style="font-size:24px">SRS 2023</i>
     </footer>
 
-    <script src="/assets/js/script.js">
+    <script src="assets/js/script.js">
     </script>
 
 </body>
