added href to contact buttons

--- a/index.html
+++ b/index.html
@@ -121,7 +121,8 @@
                         <p class="w3-opacity">CEO & Founder</p>
                         <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque
                             elementum.</p>
-                        <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i>
+                        <p><a href="contact" button class="w3-button w3-light-grey w3-block"><i
+                                    class="fa fa-envelope"></i>
                                 Contact</button></p>
                     </div>
                 </div>
@@ -134,7 +135,8 @@
                         <p class="w3-opacity">Manager</p>
                         <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque
                             elementum.</p>
-                        <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i>
+                        <p><a href="contact" button class="w3-button w3-light-grey w3-block"><i
+                                    class="fa fa-envelope"></i>
                                 Contact</button></p>
                     </div>
                 </div>
@@ -147,7 +149,8 @@
                         <p class="w3-opacity">Web Designers</p>
                         <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque
                             elementum.</p>
-                        <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i>
+                        <p><a href="contact" button class="w3-button w3-light-grey w3-block"><i
+                                    class="fa fa-envelope"></i>
                                 Contact</button></p>
                     </div>
                 </div>
@@ -160,7 +163,8 @@
                         <p class="w3-opacity">Repair Team</p>
                         <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque
                             elementum.</p>
-                        <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i>
+                        <p><a href="contact" button class="w3-button w3-light-grey w3-block"><i
+                                    class="fa fa-envelope"></i>
                                 Contact</button></p>
                     </div>
                 </div>
