--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
                         <p class="w3-opacity">CEO & Founder</p>
                         <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque
                             elementum.</p>
-                        <p><a href="contact" button class="w3-button w3-light-grey w3-block"><i
-                                    class="fa fa-envelope"></i>
+                        <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i>
                                 Contact</button></p>
                     </div>
                 </div>
@@ -135,8 +134,7 @@
                         <p class="w3-opacity">Manager</p>
                         <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque
                             elementum.</p>
-                        <p><a href="contact" button class="w3-button w3-light-grey w3-block"><i
-                                    class="fa fa-envelope"></i>
+                        <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i>
                                 Contact</button></p>
                     </div>
                 </div>
@@ -149,8 +147,7 @@
                         <p class="w3-opacity">Web Designers</p>
                         <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque
                             elementum.</p>
-                        <p><a href="contact" button class="w3-button w3-light-grey w3-block"><i
-                                    class="fa fa-envelope"></i>
+                        <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i>
                                 Contact</button></p>
                     </div>
                 </div>
@@ -163,8 +160,7 @@
                         <p class="w3-opacity">Repair Team</p>
                         <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque
                             elementum.</p>
-                        <p><a href="contact" button class="w3-button w3-light-grey w3-block"><i
-                                    class="fa fa-envelope"></i>
+                        <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i>
                                 Contact</button></p>
                     </div>
                 </div>
