added text to cards

--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@
                     <div class="w3-container">
                         <h3>Jay Hunt</h3>
                         <p class="w3-opacity">CEO & Founder</p>
-                        <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque
-                            elementum.</p>
+                        <p>Hello Im Jay Hunt the CEO and Founder of SRS.</p>
                         <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i>
                                 Contact</button></p>
                     </div>
@@ -132,8 +131,7 @@
                     <div class="w3-container">
                         <h3>Anja Doe</h3>
                         <p class="w3-opacity">Manager</p>
-                        <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque
-                            elementum.</p>
+                        <p>Hello Im Anja Doe the manager of SRS.</p>
                         <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i>
                                 Contact</button></p>
                     </div>
@@ -145,8 +143,7 @@
                     <div class="w3-container">
                         <h3>Design Team</h3>
                         <p class="w3-opacity">Web Designers</p>
-                        <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque
-                            elementum.</p>
+                        <p>Hello We are the Design Team at SRS.</p>
                         <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i>
                                 Contact</button></p>
                     </div>
@@ -158,8 +155,7 @@
                     <div class="w3-container">
                         <h3>Repair Team</h3>
                         <p class="w3-opacity">Repair Team</p>
-                        <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque
-                            elementum.</p>
+                        <p>Hello We are the Repair Team at SRS.</p>
                         <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i>
                                 Contact</button></p>
                     </div>
