--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
                     more</a></p>
         </div>
         <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
-            <i class="fa fa-facebook-official w3-hover-opacity"></i>
-            <i class="fa fa-instagram w3-hover-opacity"></i>
-            <i class="fa fa-snapchat w3-hover-opacity"></i>
-            <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-            <i class="fa fa-twitter w3-hover-opacity"></i>
-            <i class="fa fa-linkedin w3-hover-opacity"></i>
+            <a href="https://www.facebook.com/"></a><i class="fa fa-facebook-official w3-hover-opacity"></i>
+            <a href="https://www.instagram.com/"></a><i class="fa fa-instagram w3-hover-opacity"></i>
+            <a href="https://www.snapchat.com/"></a><i class="fa fa-snapchat w3-hover-opacity"></i>
+            <a href="https://www.pinterest.ie/"></a><i class="fa fa-pinterest-p w3-hover-opacity"></i>
+            <a href="https://twitter.com/"></a><i class="fa fa-twitter w3-hover-opacity"></i>
+            <a href="https://www.linkedin.com/"></a><i class="fa fa-linkedin w3-hover-opacity"></i>
         </div>
     </header>
 
@@ -351,12 +351,12 @@
     <footer class="w3-center w3-black w3-padding-64">
         <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
         <div class="w3-xlarge w3-section">
-            <i class="fa fa-facebook-official w3-hover-opacity"></i>
-            <i class="fa fa-instagram w3-hover-opacity"></i>
-            <i class="fa fa-snapchat w3-hover-opacity"></i>
-            <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-            <i class="fa fa-twitter w3-hover-opacity"></i>
-            <i class="fa fa-linkedin w3-hover-opacity"></i>
+            <a href="https://www.facebook.com/"></a><i class="fa fa-facebook-official w3-hover-opacity"></i>
+            <a href="https://www.instagram.com/"></a><i class="fa fa-instagram w3-hover-opacity"></i>
+            <a href="https://www.snapchat.com/"></a><i class="fa fa-snapchat w3-hover-opacity"></i>
+            <a href="https://www.pinterest.ie/"></a><i class="fa fa-pinterest-p w3-hover-opacity"></i>
+            <a href="https://twitter.com/"></a><i class="fa fa-twitter w3-hover-opacity"></i>
+            <a href="https://www.snapchat.com/"></a><i class="fa fa-linkedin w3-hover-opacity"></i>
         </div>
         <p>Created by Jay O'Sullivan</p>
         <i class="fa fa-copyright" style="font-size:24px">SRS 2023</i>
