--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
         </div>
         <div class="w3-display-bottomleft w3-text-grey w3-large" style="padding:24px 48px">
             <a href="https://www.facebook.com/"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-            <a href="https://www.instagram.com/"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-            <a href="https://www.snapchat.com/"><i class="fa fa-snapchat w3-hover-opacity"></i></a>
-            <a href="https://www.pinterest.ie/"><i class="fa fa-pinterest-p w3-hover-opacity"></i></a>
-            <a href="https://twitter.com/"><i class="fa fa-twitter w3-hover-opacity"></i></a>
-            <a href="https://www.linkedin.com/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+            <a href="https://www.instagram.com/" class="fa fa-instagram w3-hover-opacity"></a>
+            <a href="https://www.snapchat.com/" class="fa fa-snapchat w3-hover-opacity"></a>
+            <a href="https://www.pinterest.ie/" class="fa fa-pinterest-p w3-hover-opacity"></a>
+            <a href="https://twitter.com/" class="fa fa-twitter w3-hover-opacity"></a>
+            <a href="https://www.linkedin.com/" class="fa fa-linkedin w3-hover-opacity"></a>
         </div>
     </header>
 
@@ -352,11 +352,11 @@
         <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
         <div class="w3-xlarge w3-section">
             <a href="https://www.facebook.com/"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
-            <a href="https://www.instagram.com/"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-            <a href="https://www.snapchat.com/"><i class="fa fa-snapchat w3-hover-opacity"></i></a>
-            <a href="https://www.pinterest.ie/"><i class="fa fa-pinterest-p w3-hover-opacity"></i></a>
-            <a href="https://twitter.com/"><i class="fa fa-twitter w3-hover-opacity"></i></a>
-            <a href="https://www.snapchat.com/"><i class="fa fa-linkedin w3-hover-opacity"></i></a>
+            <a href="https://www.instagram.com/" class="fa fa-instagram w3-hover-opacity"></a>
+            <a href="https://www.snapchat.com/" class="fa fa-snapchat w3-hover-opacity"></a>
+            <a href="https://www.pinterest.ie/" class="fa fa-pinterest-p w3-hover-opacity"></a>
+            <a href="https://twitter.com/" class="fa fa-twitter w3-hover-opacity"></a>
+            <a href="https://www.linkedin.com/" class="fa fa-linkedin w3-hover-opacity"></a>
         </div>
         <p>Created by Jay O'Sullivan</p>
         <i class="fa fa-copyright" style="font-size:24px">SRS 2023</i>
