fixed error while testing

--- a/index.html
+++ b/index.html
@@ -120,8 +120,9 @@
                         <h3>Jay Hunt</h3>
                         <p class="w3-opacity">CEO & Founder</p>
                         <p>Hello Im Jay Hunt the CEO and Founder of SRS.</p>
-                        <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i>
-                                <a href="#contact"> Contact</a></button></p>
+                        <p><button onclick="window.location.href='#contact'" class="w3-button w3-light-grey w3-block"><i
+                                    class="fa fa-envelope"></i>
+                                Contact </button></p>
                     </div>
                 </div>
             </div>
@@ -132,8 +133,9 @@
                         <h3>Anja Doe</h3>
                         <p class="w3-opacity">Manager</p>
                         <p>Hello Im Anja Doe the manager of SRS.</p>
-                        <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i><a
-                                    href="#contact"> Contact</a></button></p>
+                        <p><button onclick="window.location.href='#contact'" class="w3-button w3-light-grey w3-block"><i
+                                    class="fa fa-envelope"></i>
+                                Contact </button></p>
                     </div>
                 </div>
             </div>
@@ -144,8 +146,9 @@
                         <h3>Design Team</h3>
                         <p class="w3-opacity">Web Designers</p>
                         <p>Hello We are the Design Team at SRS.</p>
-                        <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i>
-                                <a href="#contact"> Contact</a></button></p>
+                        <p><button onclick="window.location.href='#contact'" class="w3-button w3-light-grey w3-block"><i
+                                    class="fa fa-envelope"></i>
+                                Contact </button></p>
                     </div>
                 </div>
             </div>
@@ -156,9 +159,9 @@
                         <h3>Repair Team</h3>
                         <p class="w3-opacity">Repair Team</p>
                         <p>Hello We are the Repair Team at SRS.</p>
-                        <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i>
-                                <a href="#contact"> Contact</a>
-                            </button></p>
+                        <p><button onclick="window.location.href='#contact'" class="w3-button w3-light-grey w3-block"><i
+                                    class="fa fa-envelope"></i>
+                                Contact </button></p>
                     </div>
                 </div>
             </div>
@@ -228,15 +231,7 @@
             </div>
         </div>
     </div>
-    <!-- Modal for full size images on click-->
-    <div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
-        <span class="w3-button w3-xxlarge w3-black w3-padding-large w3-display-topright"
-            title="Close Modal Image">×</span>
-        <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
-            <img id="img01" class="w3-image">
-            <p id="caption" class="w3-opacity w3-large"></p>
-        </div>
-    </div>
+
 
     <!-- Skills Section -->
     <div class="w3-container w3-light-grey w3-padding-64">
